--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@
     <!-- Core Dependencies -->
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
     <script src="js/LiquidEther.js"></script>
     <script src="js/FloatingDock.js"></script>
     <script src="js/CardHover.js"></script>
-    <script src="node_modules/lenis/dist/lenis.min.js"></script>
     <script src="js/ScrollStack.js"></script>
     <script src="js/ThemeSync.js"></script>
     <script src="js/script.js"></script>
